--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: python
-  script:
-    - pylint
+before_install:
+  - python --version
+install:
+  - pip install -r requirements.txt
+script:
+  - pylint
